# attic

Aetherius/: README.md  package-lock.json  package.json
Aetherius/app/: layout.js  page.js
Aetherius/app/blog/[id]/: page.jsx
Aetherius/components/: Featured.jsx  Header.jsx  PostContainer.jsx  Recent.jsx  SearchBar.jsx
Aetherius/public/: mockapi.js
NoSkills/: LICENSE  README.md  noskills.js  quiz.js
QuickRide/: README.md  app.js  index.html  package-lock.json  package.json
QuickRide/public/: aboutus.html  all-rides.html  home.js  ride-details.html
Skipit/: README.md  index.html  package-lock.json  package.json
Skipit/public/: main.js
VoxGuard/: .gitignore  README.md
VoxGuard/backend/: ai_engine.py  app.py  debug_ai.py  pyproject.toml  requirements.txt
VoxGuard/frontend/: capacitor.config.json  package-lock.json  package.json
VoxGuard/frontend/android/: gradle.properties
VoxGuard/frontend/android/app/: build.gradle
VoxGuard/frontend/android/app/src/main/java/com/defense/voxguard/: MainActivity.java
VoxGuard/frontend/android/app/src/main/res/values/: strings.xml
VoxGuard/frontend/src/: App.css  App.jsx  config.js  index.css
VoxGuard/frontend/src/components/: SOSBeacon.jsx
VoxGuard/frontend/src/hooks/: useAudioRecorder.js
