[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
	"flask==3.0.0",
	"flask-cors==4.0.0",
	"noisereduce==3.0.0",
	"librosa==0.10.1",
	"soundfile==0.12.1",
	"numpy==1.26.3",
	"setuptools>=70.0.0",
	"torch>=2.0.0",
	"static-ffmpeg>=3.0.0",
	"IndicTransToolkit",
	# "setuptools",
	# "nemo-toolkit[all]",
]

[tool.uv.sources]
nemo-toolkit = { path = "vendor/nemo_toolkit-1.23.0rc0-py3-none-any.whl" }
